<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_settings">Settings</string>
    <string name="alwaysUse">Use this option as default</string>
    <string name="date_time_set">Set</string>
    <string name="file_selected_number">%1$s file(s) selected, %2$s MB in total</string>
    <string name="mc_allow">OK</string>
    <string name="mc_alway_allow">Always allow</string>
    <string name="mc_cancel">Cancel</string>
    <string name="mc_cancel_button_text">Cancel</string>
    <string name="mc_cancel_collected_message">Canceled from Favorite</string>
    <string name="mc_cancel_praised_message">Cancel like</string>
    <string name="mc_change_num">Update</string>
    <string name="mc_collected_message">Favorite status</string>
    <string name="mc_custom_date_time_gregorian">Gregorian</string>
    <string name="mc_custom_date_time_lunar">Lunar</string>
    <string name="mc_date_time_day">d</string>
    <string name="mc_date_time_hour">h</string>
    <string name="mc_date_time_min">m</string>
    <string name="mc_date_time_month">m</string>
    <string name="mc_date_time_sec">s</string>
    <string name="mc_date_time_set">Set</string>
    <string name="mc_date_time_year">y</string>
    <string name="mc_description_target_answer">Answer</string>
    <string name="mc_description_target_decline">Reject</string>
    <string name="mc_disable">Disable</string>
    <string name="mc_downloading_patch_prefix">Download Update File</string>
    <string name="mc_downloading_prefix">Downloaded</string>
    <string name="mc_enhanceseekbar">Using slider control. Currently set to %1$s</string>
    <string name="mc_every_day">Every day</string>
    <string name="mc_friday">FR</string>
    <string name="mc_go_Refreshing">Go refresh</string>
    <string name="mc_hour">h</string>
    <string name="mc_is_Refreshing">Refreshing</string>
    <string name="mc_last_refresh">last refresh</string>
    <string name="mc_last_refresh_hour">hour(s) ago</string>
    <string name="mc_last_refresh_just_now">just now</string>
    <string name="mc_last_refresh_minute">minute(s) ago</string>
    <string name="mc_last_refresh_second">s ago</string>
    <string name="mc_loading_animation_alert">Saving image</string>
    <string name="mc_loading_view_text">Loading</string>
    <string name="mc_minute">m</string>
    <string name="mc_monday">MO</string>
    <string name="mc_never">Once</string>
    <string name="mc_permission_apply">Request for permission</string>
    <string name="mc_permission_message_content">%1$s requests %3$d permission(s) including %2$s</string>
    <string name="mc_pm_allow_check_app">OK</string>
    <string name="mc_pm_allow_dialog_push">Allow push</string>
    <string name="mc_pm_bluetooth">Bluetooth</string>
    <string name="mc_pm_call">Call</string>
    <string name="mc_pm_call_log">Read CallLog</string>
    <string name="mc_pm_camera">Camera (Photo/Video)</string>
    <string name="mc_pm_close">Close</string>
    <string name="mc_pm_contacts">Read Contacts</string>
    <string name="mc_pm_dialog_push">Pop-up push</string>
    <string name="mc_pm_dlg_cancel">Cancel</string>
    <string name="mc_pm_dlg_ok">OK</string>
    <string name="mc_pm_location">Locate</string>
    <string name="mc_pm_network">Cellular data</string>
    <string name="mc_pm_nfc">NFC</string>
    <string name="mc_pm_not_allow_check_app">Exit</string>
    <string name="mc_pm_not_allow_dialog_push">Disable</string>
    <string name="mc_pm_online_intenert">Internet</string>
    <string name="mc_pm_open">Open</string>
    <string name="mc_pm_r_mms">Read MMS</string>
    <string name="mc_pm_r_sms">Read SMS</string>
    <string name="mc_pm_recordaudio_local">Local/Calling Record</string>
    <string name="mc_pm_recordaudio_phone">Calling Record</string>
    <string name="mc_pm_s_mms">Send MMS</string>
    <string name="mc_pm_s_sms">Send SMS</string>
    <string name="mc_pm_set_bluetooth_on">Turn on Bluetooth</string>
    <string name="mc_pm_set_gprs_on">Turn on mobile network</string>
    <string name="mc_pm_set_wifi_on">Turn on WLAN</string>
    <string name="mc_pm_wlan">WLAN</string>
    <string name="mc_praised_message">Like</string>
    <string name="mc_pull_refresh">Pull down to refresh</string>
    <string name="mc_reject">Exit</string>
    <string name="mc_saturday">SA</string>
    <string name="mc_search">Search</string>
    <string name="mc_search_button_text">Search</string>
    <string name="mc_search_icon">Search</string>
    <string name="mc_search_icon_input_clear">Clear</string>
    <string name="mc_search_text">Search</string>
    <string name="mc_second">s</string>
    <string name="mc_sunday">SU</string>
    <string name="mc_thursday">TH</string>
    <string name="mc_time_picker_dialog_title">Schedule</string>
    <string name="mc_time_picker_leap">Leap month</string>
    <string name="mc_tuesday">TU</string>
    <string name="mc_updating_prefix">Updating</string>
    <string name="mc_value_checked">Selected</string>
    <string name="mc_value_not_checked">Not selected</string>
    <string name="mc_voice_icon">Voice Search</string>
    <string name="mc_wednesday">WE</string>
    <string name="mc_weekend">Weekend</string>
    <string name="mc_working_day">Weekdays</string>
    <string name="mc_yes">OK</string>
    <string name="more_item_label">More</string>
    <string name="mz_action_bar_multi_choice_cancel">Cancel</string>
    <string name="mz_action_bar_multi_choice_select_all">All</string>
    <string name="mz_action_bar_multi_choice_select_all_cancel">None</string>
    <string name="mz_action_bar_multi_choice_title">%d Item(s) Selected</string>
    <string name="mz_allow">OK</string>
    <string name="mz_alway_allow">Always allow</string>
    <string name="mz_date_time_day">d</string>
    <string name="mz_date_time_hour">h</string>
    <string name="mz_date_time_min">m</string>
    <string name="mz_date_time_month">m</string>
    <string name="mz_date_time_sec">s</string>
    <string name="mz_date_time_year">y</string>
    <string name="mz_network_unavailable_hint">Network unavailable. Please check network settings.</string>
    <string name="mz_permission_apply">Permission request</string>
    <string name="mz_permission_message_content">%1$s requests %3$d permission(s) to %2$s.</string>
    <string name="mz_pm_allow_check_app">OK</string>
    <string name="mz_pm_allow_dialog_push">allow push notifications</string>
    <string name="mz_pm_bluetooth">control Bluetooth</string>
    <string name="mz_pm_call">call phone</string>
    <string name="mz_pm_call_log">read call logs</string>
    <string name="mz_pm_camera">use camera (to take photo/video)</string>
    <string name="mz_pm_close">Off</string>
    <string name="mz_pm_contacts">read contacts</string>
    <string name="mz_pm_dialog_push">push pop-ups</string>
    <string name="mz_pm_dlg_cancel">Cancel</string>
    <string name="mz_pm_dlg_ok">OK</string>
    <string name="mz_pm_location">access location</string>
    <string name="mz_pm_network">use mobile data</string>
    <string name="mz_pm_nfc">control NFC</string>
    <string name="mz_pm_not_allow_check_app">Exit</string>
    <string name="mz_pm_not_allow_dialog_push">Disable</string>
    <string name="mz_pm_online_intenert">access internet</string>
    <string name="mz_pm_open">On</string>
    <string name="mz_pm_r_mms">read MMS</string>
    <string name="mz_pm_r_sms">read SMS</string>
    <string name="mz_pm_recordaudio_local">record audio/call</string>
    <string name="mz_pm_recordaudio_phone">record call</string>
    <string name="mz_pm_s_mms">send MMS</string>
    <string name="mz_pm_s_sms">send SMS</string>
    <string name="mz_pm_set_bluetooth_on">turn on Bluetooth</string>
    <string name="about">About</string>
    <string name="about_subtitile1">App Store web version</string>
    <string name="about_subtitile2">Developer Community</string>
    <string name="about_titile">Meizu App Store</string>
    <string name="app_name">App Store</string>
    <string name="download_manager">Download manager</string>
    <string name="obtaining_account">Obtaining Account</string>
    <string name="obtaining_balance">Balance  Obtaining</string>
    <string name="settings">Settings</string>
    <string name="updateNotify">App update notifications</string>
    <string name="auto_downlad">Data-free update</string>
    <string name="auto_downlad_tip">Auto-download apps via WLAN</string>
    <string name="auto_install">Auto-install updates without notifications</string>
    <string name="auto_install_tips">Auto-install downloaded apps</string>
    <string name="delete_apk_subtitle">Default storage location: %s</string>
    <string name="delete_apk_title">Delete APK files after installation</string>
    <string name="notification">Notifications</string>
    <string name="recommendNotify">Receive push messages</string>
    <string name="recommendNotify_tip">Get notified for popular activities, gifts and other content</string>
    <string name="update_exclude_activity_title">App update management</string>
    <string name="allpermission">View All Permissions</string>
    <string name="app_come_from">App source:</string>
    <string name="currentversion">"Current version: "</string>
    <string name="developer">"Developer: "</string>
    <string name="install_filtered_title">Installed apps are excluded from charts.</string>
    <string name="install_manage">Installation management</string>
    <string name="install_record">Installation history</string>
    <string name="other">Other</string>
    <string name="permission">Permissions:</string>
    <string name="save_flow_setting">Data-saving settings</string>
    <string name="see_history_version">Version history</string>
    <string name="update_time">"Updated: "</string>
    <string name="ad_slogen">Easily find quality apps</string>
    <string name="enter">Enter</string>
    <string name="login_desc_part1">My Preferences</string>
    <string name="login_desc_part2">DNA</string>
    <string name="mine_red_packet">My lucky money</string>
    <string name="mobile_network_setting">Download via cellular network</string>
    <string name="notlogin">Not logged in</string>
    <string name="notlogin_desc">Login to discover your preference tags</string>
    <string name="switch_show_first_ad_tip">Get event rewards for free</string>
    <string name="switch_show_first_ad_title">Allow splash screen ad</string>
    <string name="about_web1">http://app.meizu.com</string>
    <string name="about_web2">http://developer.meizu.com</string>
</resources>