<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings" android:key="main"
  xmlns:android="http://schemas.android.com/apk/prv/res/android"
  xmlns:android1="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android1:title="@string/save_flow_setting">
        <com.meizu.common.preference.SwitchPreference android:title="@string/auto_downlad" android:key="auto_downlad" android1:summary="@string/auto_downlad_tip" android:defaultValue="true" />
        <com.meizu.common.preference.SwitchPreference android:title="@string/auto_install" android:key="auto_install" android1:summary="@string/auto_install_tips" android:defaultValue="true" />
        <PreferenceScreen android1:title="@string/mobile_network_setting" android:key="mobile_limit" />
    </PreferenceCategory>
    <PreferenceCategory android1:title="@string/install_manage">
        <com.meizu.common.preference.SwitchPreference android:title="@string/delete_apk_title" android:key="delete_apk" android1:summary="@string/delete_apk_subtitle" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/update_exclude_activity_title" android:key="auto_update_exclude" />
    </PreferenceCategory>
    <PreferenceCategory android1:title="@string/notification" android1:key="notify">
        <com.meizu.common.preference.SwitchPreference android:title="@string/updateNotify" android:key="update_notify" android:defaultValue="true" />
        <com.meizu.common.preference.SwitchPreference android:title="@string/recommendNotify" android:key="recommend_notify" android:summary="@string/recommendNotify_tip" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android1:title="@string/other" android1:key="other">
        <com.meizu.common.preference.SwitchPreference android:title="@string/install_filtered_title" android:key="filter_app" android:defaultValue="false" />
        <com.meizu.common.preference.SwitchPreference android:title="@string/switch_show_first_ad_title" android:key="show_first_ad" android:summary="@string/switch_show_first_ad_tip" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/about" android:key="about" />
    </PreferenceCategory>
</PreferenceScreen>