<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/about_main" android:paddingLeft="@dimen/about_sub_titile_margin" android:paddingRight="@dimen/about_sub_titile_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/icon" android:layout_width="@dimen/about_image_width" android:layout_height="@dimen/about_image_width" android:src="@drawable/ic_launcher" />
    <TextView android:textSize="@dimen/about_titile_size" android:textColor="@android:color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_titile_margin_top" android:text="@string/about_titile" android:alpha="0.8" android:fontFamily="DINPro-medium" />
    <TextView android:textSize="@dimen/about_titile2_size" android:textColor="@android:color/black" android:layout_gravity="center_horizontal" android:id="@id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:alpha="0.4" />
    <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:text="@string/about_subtitile1" android:alpha="0.4" />
    <TextView android:textSize="12.0sp" android:autoLink="web" android:layout_gravity="center_horizontal" android:id="@id/web_url" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/about_web1" />
    <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/about_subtitile2" android:alpha="0.4" />
    <TextView android:textSize="12.0sp" android:autoLink="web" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/about_web2" />
</LinearLayout>