<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/install_record" android:background="@drawable/mz_list_selector_background" android:paddingTop="12.0dip" android:layout_width="0.0dip" android:layout_height="64.0dip" android:text="@string/install_record" android:includeFontPadding="false" android:drawableTop="@drawable/mz_appstore_me_ic_time" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/download_manage" android:background="@drawable/mz_list_selector_background" android:paddingTop="12.0dip" android:layout_width="0.0dip" android:layout_height="64.0dip" android:text="@string/download_manager" android:includeFontPadding="false" android:drawableTop="@drawable/mz_appstore_me_ic_download" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/red_packet_manage" android:background="@drawable/mz_list_selector_background" android:paddingTop="12.0dip" android:layout_width="0.0dip" android:layout_height="64.0dip" android:text="@string/mine_red_packet" android:includeFontPadding="false" android:drawableTop="@drawable/mz_mstore_mine_ic_money" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="12.0sp" android:textColor="@android:color/black" android:gravity="center" android:id="@id/setting_manage" android:background="@drawable/mz_list_selector_background" android:paddingTop="12.0dip" android:layout_width="0.0dip" android:layout_height="64.0dip" android:text="@string/settings" android:includeFontPadding="false" android:drawableTop="@drawable/mz_appstore_me_ic_setting" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
</LinearLayout>