<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/account_container" android:clipChildren="true" android:layout_width="fill_parent" android:layout_height="157.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.meizu.cloud.app.widget.ScanImgeView android:id="@id/account_picture" android:layout_width="@dimen/personal_user_image_width" android:layout_height="@dimen/personal_user_image_height" android:layout_marginLeft="30.699982dip" android:layout_marginTop="29.299988dip" />
    <ImageView android:id="@id/account_bg" android:layout_width="fill_parent" android:layout_height="187.0dip" android:src="@drawable/mz_mstore_mine_accountbase" android:scaleType="matrix" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="154.0dip" android:layout_height="wrap_content" android:layout_marginTop="129.9dip">
        <TextView android:textSize="@dimen/personal_user_size" android:textColor="@color/title_color" android:id="@id/account_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obtaining_account" android:maxLines="1" android:fontFamily="sans-serif-medium" />
        <TextView android:textSize="12.0sp" android:textColor="@color/desc_color" android:ellipsize="end" android:id="@id/account_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:maxWidth="132.0dip" android:text="@string/obtaining_balance" android:maxLines="1" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/unlogin_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="145.0dip" android:layout_marginTop="55.0dip" android:text="@string/notlogin" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/unlogin_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="145.0dip" android:layout_marginTop="81.0dip" android:text="@string/notlogin_desc" android:alpha="0.7" />
    <ImageView android:id="@id/unlogin_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="320.0dip" android:layout_marginTop="72.0dip" android:src="@drawable/unlogin_arrow" />
    <LinearLayout android:orientation="horizontal" android:id="@id/personal_tags_title_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="171.4dip" android:layout_marginTop="33.299988dip">
        <TextView android:textSize="21.0dip" android:textColor="#ff1787fb" android:id="@id/personal_tags_title_part1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_desc_part1" />
        <TextView android:textSize="24.0dip" android:textColor="#ff1787fb" android:id="@id/personal_tags_title_part2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="0.70000005dip" android:text="@string/login_desc_part2" android:fontFamily="sans-serif-light" />
    </LinearLayout>
    <LinearLayout android:gravity="center|left" android:id="@id/personal_tags_container1" android:clickable="false" android:layout_width="180.0dip" android:layout_height="26.0dip" android:layout_marginLeft="169.4dip" android:layout_marginTop="69.0dip" />
    <LinearLayout android:gravity="center|left" android:id="@id/personal_tags_container2" android:paddingLeft="20.0dip" android:clickable="false" android:layout_width="180.0dip" android:layout_height="24.0dip" android:layout_marginLeft="169.4dip" android:layout_marginTop="97.0dip" />
    <LinearLayout android:gravity="center|left" android:id="@id/personal_tags_container3" android:clickable="false" android:layout_width="180.0dip" android:layout_height="26.0dip" android:layout_marginLeft="169.4dip" android:layout_marginTop="124.0dip" />
</FrameLayout>