<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingTop="16.0dip" android:paddingBottom="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent40" android:id="@id/app_developer_name_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="93.0dip" android:text="@string/developer" android:singleLine="true" android:paddingStart="@dimen/app_info_relatedinfo_paddingleft" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent90" android:id="@id/app_developer_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:singleLine="true" android:layout_toRightOf="@id/app_developer_name_txt" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent40" android:id="@id/app_update_time_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.669983dip" android:minWidth="93.0dip" android:text="@string/update_time" android:singleLine="true" android:layout_below="@id/app_developer_name_txt" android:paddingStart="@dimen/app_info_relatedinfo_paddingleft" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent90" android:id="@id/app_update_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginTop="5.669983dip" android:singleLine="true" android:layout_toRightOf="@id/app_update_time_txt" android:layout_below="@id/app_developer_name_txt" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent40" android:id="@id/app_current_version_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.669983dip" android:minWidth="93.0dip" android:text="@string/currentversion" android:singleLine="true" android:layout_below="@id/app_update_time_txt" android:paddingStart="@dimen/app_info_relatedinfo_paddingleft" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent90" android:id="@id/app_current_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginTop="5.669983dip" android:singleLine="true" android:layout_toRightOf="@id/app_current_version_txt" android:layout_below="@id/app_update_time_txt" />
    <TextView android:textSize="12.0sp" android:textColor="@color/theme_color" android:id="@id/app_view_historyver" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/see_history_version" android:singleLine="true" android:layout_below="@id/app_current_version_txt" android:layout_alignLeft="@id/app_current_version" android:fontFamily="sans-serif-medium" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" android:layout_marginStart="-5.0dip" android:layout_marginEnd="-5.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent40" android:id="@id/app_permission_info_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.669983dip" android:minWidth="93.0dip" android:text="@string/permission" android:singleLine="true" android:layout_below="@id/app_view_historyver" android:paddingStart="@dimen/app_info_relatedinfo_paddingleft" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent90" android:id="@id/app_permission_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginTop="5.669983dip" android:singleLine="true" android:layout_toRightOf="@id/app_permission_info_txt" android:layout_below="@id/app_view_historyver" />
    <TextView android:textSize="12.0sp" android:textColor="@color/theme_color" android:id="@id/app_view_all_permissions" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/allpermission" android:singleLine="true" android:layout_toRightOf="@id/app_update_time_txt" android:layout_below="@id/app_permission_info_txt" android:layout_alignLeft="@id/app_permission_info" android:fontFamily="sans-serif-medium" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" android:layout_marginStart="-5.0dip" android:layout_marginEnd="-5.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent40" android:id="@id/app_source_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.669983dip" android:minWidth="93.0dip" android:text="@string/app_come_from" android:singleLine="true" android:layout_below="@id/app_view_all_permissions" android:paddingStart="@dimen/app_info_relatedinfo_paddingleft" />
    <TextView android:textSize="12.0sp" android:textColor="@color/transparent90" android:id="@id/app_source" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginTop="5.669983dip" android:singleLine="true" android:layout_toRightOf="@id/app_source_txt" android:layout_below="@id/app_view_all_permissions" />
</RelativeLayout>