<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/bottom" android:layout_width="fill_parent" android:layout_height="70.0dip" android:layout_alignParentBottom="true">
        <ImageView android:id="@id/app_icon" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginLeft="24.0dip" android:src="@drawable/ic_launcher" android:layout_centerVertical="true" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/app_icon" android:layout_centerVertical="true">
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/tv_ad_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:fontFamily="sans-serif-medium" />
            <TextView android:textSize="10.0sp" android:textColor="@color/desc_color" android:id="@id/tv_ad_slogen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/ad_slogen" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="?mzThemeColor" android:id="@id/enter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enter" android:layout_toLeftOf="@id/comment_arrow_next_right" android:layout_centerVertical="true" android:fontFamily="sans-serif-medium" />
        <ImageView android:id="@id/comment_arrow_next_right" android:background="@drawable/mz_list_category_1_right_triangle" android:layout_width="@dimen/mz_list_category_1_right_label_pic_weight" android:layout_height="@dimen/mz_list_category_1_right_label_pic_height" android:layout_marginLeft="4.0dip" android:layout_marginRight="22.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:scaleY="0.95" />
    </RelativeLayout>
    <FrameLayout android:id="@id/ad_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:layout_above="@id/bottom" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
    <TextView android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_time" android:background="#0d000000" android:layout_width="40.0dip" android:layout_height="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:fontFamily="sans-serif-medium" />
</RelativeLayout>